--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -56,6 +56,7 @@ footer .footfacebook, footer .foottwitter {
   width: 30px; 
   height: 30px; 
   margin: -10px 10px 0;
+  overflow-x: hidden;
 }
 
 footer .row div{  
